修改测试的问题